tests/c_programs/conditional/valid/assignment.c
int main(void) {
    int x;
    // Conditional on right side of assignment
    x = 5 > 3 ? 100 : 200;
    return x;
}