tests/c_programs/conditional/invalid_parse/missing_else.c
int main(void) {
    // Missing else expression - should fail
    return 1 ? 42 : ;
}